# LightLLM

./: README.md  generate.py  pyproject.toml  requirements.txt  setup.py
engine/: __about__.py  __init__.py  __setup__.py
engine/fabric/: __init__.py  cli.py  connector.py  fabric.py  wrappers.py
engine/fabric/_graveyard/: __init__.py  tpu.py
engine/fabric/accelerators/: __init__.py  accelerator.py  cpu.py  cuda.py  mps.py  registry.py  xla.py
engine/fabric/loggers/: __init__.py  csv_logs.py  logger.py  tensorboard.py
engine/fabric/plugins/: __init__.py
engine/fabric/strategies/: __init__.py  ddp.py  deepspeed.py  dp.py  fsdp.py  parallel.py  registry.py  single_device.py  single_xla.py  (+3 more)
evaluate/: adapter.py  adapter_v2.py  full.py  lora.py
generate/: adapter.py  adapter_v2.py  full.py  lora.py
llama_model/: __init__.py  adapter.py  adapter_v2.py  lora.py  model.py  utils.py
pretrain/: redpajama.py  shakespeare.py
quantize/: gptq.py
scripts/: convert_checkpoint.py  convert_hf_checkpoint.py  convert_lora_weights.py  prepare_alpaca.py  prepare_any_text.py  prepare_dolly.py  prepare_redpajama.py  prepare_shakespeare.py
tests/: conftest.py  test_adapter.py  test_adapter_v2.py  test_generate.py  test_lora.py  test_model.py  test_packed_dataset.py  test_prepare_redpajama.py  test_utils.py
utilities/: __about__.py  __init__.py
utilities/cli/: __main__.py  dependencies.py
utilities/core/: __init__.py  apply_func.py  enums.py  imports.py  inheritance.py  overrides.py  rank_zero.py
utilities/docs/: __init__.py
utilities/install/: __init__.py
(+55 files in other folders)
